# -*- coding: utf-8 -*-
# @Time : 2024/8/7 下午3:31
# @Author : Mr.wang
# @Email : 204062518@qq.com
# @File : asset.py
# @Project : Envlt
class Asset:
    def __init__(self):
        pass
