# -*- coding: utf-8 -*-
# @Time : 2024/8/7 下午3:32
# @Author : Mr.wang
# @Email : 204062518@qq.com
# @File : image_data.py
# @Project : Envlt
class ImageData:
    pass
