# -*- coding: utf-8 -*-
# @Time : 2024/8/7 下午4:27
# @Author : Mr.wang
# @Email : 204062518@qq.com
# @File : scene.py
# @Project : Envlt

class Scene:
    def __init__(self, scene_name: str):
        pass
